# SHU-Computer-Architecture-Experiments

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Env_Setup_Guide_for_Linux.md  Env_Setup_Guide_for_Windows.md  Exp02-Tutor.md  Exp03-Tutor.md  Exp04-Tutor.md  Exp06-Tutor.md  Exp07-Tutor.md  Exp08-Tutor.md  exp02_zh.md
exp0-cuda/src/: ABpC_main.cpp
exp02-openmp/: CMakeLists.txt
exp02-openmp-src/: CMakeLists.txt  computePi_main.cpp  hellomp_main.cpp  innerProduct.cu  innerProduct_main.cpp  matmul_main.cpp  sharedVars_main.cpp
exp02-openmp/include/: InnerProduct.hpp
exp02-openmp/src/: computePi_main.cpp  innerProduct.cu  innerProduct_main.cpp  matmul_main.cpp  sharedVars_main.cpp
exp03-mpi/: CMakeLists.txt
exp03-mpi/src/: hellompi_main.cpp  matmul_main.cpp  test.cpp
exp04-hpl/: Make.Linux64_BLIS  Make.Linux64_MKL  Make.Linux64_OpenBLAS
exp05-cuda/: CMakeLists.txt
exp05-cuda/src/: ABpC.cu  ABpC_main.cpp
exp06-profiler/: 体系结构实验---CUDA.docx
include/: xRandom.hpp
scripts/: Make.Linux64_AMD  build-exp02.ps1  build-exp02.sh  build-exp03.sh  build-exp05.ps1  build-exp05.sh  build-libs.ps1  build-libs.sh  build.ps1  build.sh
